--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 				<div class="container">
 					<div class="cta-inner section-inner">
 						<h3 class="section-title mt-0">我们强大的团队</h3>
+						<a class="button button-primary button-widea>obile" href="http://zrylab.github.io/">返回主页</a>
 						<div class="cta-cta">
 						</div>
 					</div>
@@ -120,7 +121,7 @@
                     </div>
                     <ul class="footer-links list-reset">
 			    <li>
-                            <a href="#">介绍</a>
+                            <a href="https://zrylab.github.io/">介绍</a>
                         </li>
 			    <li>
                             <a href="https://discord.gg/EzgSuc9">Discord</a>
