--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					<div class="cta-inner section-inner">
 						<h3 class="section-title mt-0">我们强大的团队</h3>
 						<a class="button button-primary button-widea>obile" href="http://zrylab.github.io/">返回主页</a>
+                                                <a class="button button-primary button-widea>obile" href="http://maomao.maikama.cn/">进入小卖铺</a>
 						<div class="cta-cta">
 						</div>
 					</div>
