--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Zry Lab | 官方网站 | 我们的团队 | Hello World !</title>
+    <title>Zry Lab | 官方网站 | 团队介绍 | Hello World !</title>
 	<link rel="icon" href="images/favicon.svg">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
