--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
                 </div>
             </div>
         </header>
-          <section class="cta section">
+	    <section class="cta section">
 				<div class="container">
 					<div class="cta-inner section-inner">
-						<h3 class="section-title mt-0">我们强大的团队</h3>
-						<a class="button button-primary button-widea>obile" href="http://zrylab.github.io/">返回主页</a>
-                                                <a class="button button-primary button-widea>obile" href="http://maomao.maikama.cn/">进入小卖铺</a>
+						<h3 class="section-title mt-0">我们的团队介绍</h3>
 						<div class="cta-cta">
+							<a class="button button-primary button-wide-mobile" href="https://zrylab.github.io/">返回主页</a>
 						</div>
 					</div>
 				</div>
 			</section>
+          <p> </p>
         <section class="features section">
                 <div class="container">
 					<div class="features-inner section-inner has-bottom-divider">
