--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <a href="http://smallcat.maikama.cn">小卖部</a>
                         </li>
                         <li>
-                            <a href="https://jq.qq.com/?_wv=1027&k=53FAO3o">加入我们</a>
+                            <a href="group">加入我们</a>
                         </li>
                     </ul>
                     <ul class="footer-social-links list-reset">
