--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <a href="https://discord.gg/EzgSuc9">Discord</a>
                         </li>
                         <li>
-                            <a href="http://smallcat.maikama.cn">小卖部</a>
+                            <a href="http://smallcat.maikama.cn">商店</a>
                         </li>
                         <li>
                             <a href="https://zrylab.github.io/group">加入我们</a>
