--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
                                     <p class="text-sm mb-0">QQ : 2126423992</p>
                                 </div>
                             </div>
+<div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+										<img src="images/feature-icon-03.svg" alt="Feature 03">
+                                    </div>
+                                    <h4 class="feature-title mt-24">MODNUK</h4>
+                                    <p class="text-sm mb-0">团队中的程序猿</p>
+                                    <p class="text-sm mb-0">团队的程序有他写的</p>
+                                    <p class="text-sm mb-0">QQ : 3098047917</p>
+                                </div>
+                            </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
