--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	    <section class="cta section">
 				<div class="container">
 					<div class="cta-inner section-inner">
-						<h3 class="section-title mt-0">我们的团队的介绍</h3>
+						<h3 class="section-title mt-0">我们团队的介绍</h3>
 						<div class="cta-cta">
 							<a class="button button-primary button-wide-mobile" href="https://zrylab.github.io/">返回主页</a>
 						</div>
