--- a/index.html
+++ b/index.html
@@ -118,6 +118,19 @@
                                     <p class="text-sm mb-0">团队中最懂数学的一个小乖乖</p>
                                     <p class="text-sm mb-0">QQ : 1460020344</p>
                                 </div>
+				    <div class="feature text-center is-revealing">
+
+                                <div class="feature-inner">
+
+                                    <div class="feature-icon">
+					<img src="images/feature-icon-03.svg" alt="Feature 03"
+                                    </div>
+                                    <h4 class="feature-title mt-24">毅然</h4>
+                                    <p class="text-sm mb-0">团队部分资源提供</p>
+                                    <p class="text-sm mb-0">团队的部分资源提供者</p>
+                                    <p class="text-sm mb-0">QQ : 3471129877</p>
+                                </div>
+                            </div>
                             </div>
                         </div>
                     </div>
