--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     </div>
                                     <h4 class="feature-title mt-24">MOKOU</h4>
                                     <p class="text-sm mb-0">团队合作者</p>
-                                    <p class="text-sm mb-0">团队的部分配置的技术支持</p>
+                                    <p class="text-sm mb-0">团队部分配置的技术支持</p>
                                     <p class="text-sm mb-0">QQ : 2126423992</p>
                                 </div>
                             </div>
