--- a/index.html
+++ b/index.html
@@ -117,19 +117,28 @@
                                     <p class="text-sm mb-0">团队专属数学老师</p>
                                     <p class="text-sm mb-0">团队中最懂数学的一个小乖乖</p>
                                     <p class="text-sm mb-0">QQ : 1460020344</p>
-                                </div>
-				    <div class="feature text-center is-revealing">
+                                  </div>
+                               </div>
+				
 
-                                <div class="feature-inner">
+	
 
-                                    <div class="feature-icon">
-					<img src="images/feature-icon-03.svg" alt="Feature 03"
+	
+
+	
+
                                     </div>
-                                    <h4 class="feature-title mt-24">毅然</h4>
-                                    <p class="text-sm mb-0">团队部分资源提供</p>
-                                    <p class="text-sm mb-0">团队的部分资源提供者</p>
-                                    <p class="text-sm mb-0">QQ : 3471129877</p>
+
+                                    <h4 class="feature-title mt-24">MOKOU</h4>
+
+                                    <p class="text-sm mb-0">团队合作者</p>
+
+                                    <p class="text-sm mb-0">团队的部分配置的技术支持</p>
+
+                                    <p class="text-sm mb-0">QQ : 2126423992</p>
+
                                 </div>
+
                             </div>
                             </div>
                         </div>
