--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
                                     </div>
 
-                                    <h4 class="feature-title mt-24">MOKOU</h4>
+                                    <h4 class="feature-title mt-24">M个OKOU</h4>
 
                                     <p class="text-sm mb-0">团队合作者</p>
 
