--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                     </div>
                                     <h4 class="feature-title mt-24">SMALLCAT</h4>
                                     <p class="text-sm mb-0">团队创始者</p>
-                                    <p class="text-sm mb-0">团队顶尖的技术人员</p>
+                                    <p class="text-sm mb-0">团队顶尖的技术猫</p>
                                     <p class="text-sm mb-0">QQ : 2476221288</p>
                                     <p class="text-sm mb-0">QQ : 2669444095</p>
                                 </div>
