--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                     <div class="feature-icon">
 										<img src="images/feature-icon-04.svg" alt="Feature 04">
                                     </div>
-                                    <h4 class="feature-title mt-24">MODNUK</h4>
+                                    <h4 class="feature-title mt-24">猫咪哟</h4>
                                     <p class="text-sm mb-0">Zry Lab 的程序猿</p>
                                 </div>
                             </div>
@@ -87,8 +87,8 @@
                                     <div class="feature-icon">
 										<img src="images/feature-icon-05.svg" alt="Feature 05">
                                     </div>
-                                    <h4 class="feature-title mt-24">毅然</h4>
-                                    <p class="text-sm mb-0">Zry Lab 的资源提供者</p>
+                                    <h4 class="feature-title mt-24">重楼</h4>
+                                    <p class="text-sm mb-0">Zry Lab 的软件测试员</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
